--- a/style.css
+++ b/style.css
@@ -503,16 +503,15 @@ section{
 /* Info section */
 .about .info {
     flex: 1 1 50%;
-    padding-right: 20px;
+    padding-left: 100px;
 }
 
 .about .info h3 {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
+    font-size: 1.6rem;
+    margin-bottom: 1.5rem;
     font-family: "Playfair Display", serif;
     color: var(--black);
 }
-
 .about .info h3 span {
     color: var(--green);
 }
