--- a/style.css
+++ b/style.css
@@ -504,10 +504,11 @@ section{
 .about .info {
     flex: 1 1 50%;
     padding-left: 40px;
+    font-family: "Playfair Display", serif;
 }
 
 .about .info h3 {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     margin-bottom: 1.5rem;
     font-family: "Playfair Display", serif;
     color: var(--black);
