--- a/style.css
+++ b/style.css
@@ -507,7 +507,7 @@ section{
 }
 
 .about .info h3 {
-    font-size: 1.8rem; /* Default for desktop */
+    font-size: 1.6rem; /* Default for desktop */
     margin-bottom: 1.5rem;
     font-family: "Playfair Display", serif;
     color: var(--black);
@@ -537,10 +537,8 @@ section{
         text-align: center;
     }
 
-    .about .info h3{
+    .about .info {
         padding-right: 0;
-        font-family: "Playfair Display", serif;
-        font-size: 1.6rem;
     }
 
     .about .image {
